--- a/Components/ImageViewer.xaml
+++ b/Components/ImageViewer.xaml
@@ -2,9 +2,12 @@
 
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModels="clr-namespace:imago.ViewModels"
+             x:DataType="viewModels:ImageViewModel"
              x:Class="imago.Components.ImageViewer">
     <StackLayout HorizontalOptions="Center" VerticalOptions="Center" Padding="20">
-        <Image x:Name="ImageView" Aspect="AspectFit" HorizontalOptions="Center"
+        <Image Aspect="AspectFit" HorizontalOptions="Center"
+               Source="{Binding Image}"
                VerticalOptions="Center" />
     </StackLayout>
 </ContentView>
